Summary of Changes to DuroDBMS

DuroDBMS 0.26

- Generic tuple types now allowed in operator parameters.

- Java interface: DException now extends RuntimeException.

DuroDBMS 0.25

- Added support for modules.

- I/O, system, and www operators are now in system-provided modules io, sys,
  and www, respectively. 

- Fixed bug in opening secondary indexes that could cause index corruption.

- Assignment of virtual and public tables using := is now supported.

- Added RDB_drop_table_by_name(), solving the problem of dropping unmapped
  public tables.

- DROP VAR and RENAME VAR are now generally prohibited in FOR .. IN loops.

- Improved error handling in Duro D/T. If an error occurs while executing
  a user-defined operator, the operator name is shown. The line where
  the error occured is identified with greater accuracy.

- Added type check to RDB_obj_set_property().

DuroDBMS 0.24

- Added error type type_not_found_error.

- Type definition now supports ORDERED.
  Added flags argument to RDB_define_type() and -ordered option
  to Duro::type define.

- Types in ORDER clause must be ordered.

- Queries of the form T1 JOIN T2 RENAME { ... } can now be optimized.

- Added RDB_expr_kind(), RDB_expr_op_args(), and RDB_expr_list_get().

- DSession is now a class. Renamed DuroPossrepObject as DefaultPossrepObject
  and VarDef as NameTypePair.
  Added missing methods and javadoc comments to UpdatableXXX classes. 

DuroDBMS 0.23

- Added connect() with recover parameter.

- Added RDB_create_env(), dropped RDB_CREATE flag of RDB_open_env()
   in favour of RDB_RECOVER. The Durotcl command duro::env was
   changed accordingly. 

- EXPLAIN now supported for local tables

- Fixed bug that caused secondary index corruption.

- Upgrade to BerkeleyDB 6.1.

DuroDBMS 0.22

- Added support for user-defined operators implemented in Java.

- Argument of RDB_base_type() is now const.

- Added function RDB_operator_param_count().
