@@ -433,6 +433,10 @@ INSERT {
     RETURN_TOKEN(TOK_INSERT);
 }
 
+D_INSERT {
+    RETURN_TOKEN(TOK_D_INSERT);
+}
+
 DELETE {
     RETURN_TOKEN(TOK_DELETE);
 }
